examples/testCAF/CAF_3/dd.err
At line 109 of file testddCAF.f90 (unit = 7, file = 'model.xyz')
Fortran runtime error: End of file

Error termination. Backtrace:
#0  0x7f318402ad4a
#1  0x7f318402b825
#2  0x7f318402bf79
#3  0x7f31840eedc3
#4  0x7f31840e9c51
#5  0x5632a7eef6bc
#6  0x5632a7ef3219
#7  0x5632a7ef33fd
#8  0x7f31833192e0
#9  0x5632a7eed399
#10  0xffffffffffffffff
