examples/testCAF/CAF_3/dd.top
# [Nim, BoxSize(:)] \n [dir, min, max]
          27   65.3219986       65.3219986       65.3219986    
           1  -32.6609993       32.6609993    
           2  -32.6609993       32.6609993    
           3  -32.6609993       32.6609993    
# imID \n [dir, min, max] \n [Nneighcell, neighcellIDs(:)]
           1
           1  -32.6609993      -11.7942505    
           2  -32.6609993      -11.7942505    
           3  -32.6609993      -11.7942505    
 26
  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           2
           1  -11.7942505       9.97974968    
           2  -32.6609993      -11.7942505    
           3  -32.6609993      -11.7942505    
 26
  1  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           3
           1   9.97974968       32.6609993    
           2  -32.6609993      -11.7942505    
           3  -32.6609993      -11.7942505    
 26
  1  2  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           4
           1  -32.6609993      -11.7942505    
           2  -11.7942505       9.97974968    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           5
           1  -32.6609993      -11.7942505    
           2   9.97974968       32.6609993    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  4  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           6
           1  -11.7942505       9.97974968    
           2  -11.7942505       9.97974968    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  4  5  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           7
           1  -11.7942505       9.97974968    
           2   9.97974968       32.6609993    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  4  5  6  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           8
           1   9.97974968       32.6609993    
           2  -11.7942505       9.97974968    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  4  5  6  7  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
           9
           1   9.97974968       32.6609993    
           2   9.97974968       32.6609993    
           3  -32.6609993      -11.7942505    
 26
  1  2  3  4  5  6  7  8 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
          10
           1  -32.6609993      -11.7942505    
           2  -32.6609993      -11.7942505    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
          11
           1  -32.6609993      -11.7942505    
           2  -32.6609993      -11.7942505    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
          12
           1  -11.7942505       9.97974968    
           2  -32.6609993      -11.7942505    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
          13
           1  -11.7942505       9.97974968    
           2  -32.6609993      -11.7942505    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 14 15 16 17 18 19 20 21 22 23 24 25 26 27
          14
           1   9.97974968       32.6609993    
           2  -32.6609993      -11.7942505    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 15 16 17 18 19 20 21 22 23 24 25 26 27
          15
           1   9.97974968       32.6609993    
           2  -32.6609993      -11.7942505    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 16 17 18 19 20 21 22 23 24 25 26 27
          16
           1  -32.6609993      -11.7942505    
           2  -11.7942505       9.97974968    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 17 18 19 20 21 22 23 24 25 26 27
          17
           1  -32.6609993      -11.7942505    
           2  -11.7942505       9.97974968    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 18 19 20 21 22 23 24 25 26 27
          18
           1  -32.6609993      -11.7942505    
           2   9.97974968       32.6609993    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 19 20 21 22 23 24 25 26 27
          19
           1  -32.6609993      -11.7942505    
           2   9.97974968       32.6609993    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 20 21 22 23 24 25 26 27
          20
           1  -11.7942505       9.97974968    
           2  -11.7942505       9.97974968    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 21 22 23 24 25 26 27
          21
           1  -11.7942505       9.97974968    
           2  -11.7942505       9.97974968    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 22 23 24 25 26 27
          22
           1  -11.7942505       9.97974968    
           2   9.97974968       32.6609993    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 23 24 25 26 27
          23
           1  -11.7942505       9.97974968    
           2   9.97974968       32.6609993    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 25 26 27
          24
           1   9.97974968       32.6609993    
           2  -11.7942505       9.97974968    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 25 26 27
          25
           1   9.97974968       32.6609993    
           2  -11.7942505       9.97974968    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 26 27
          26
           1   9.97974968       32.6609993    
           2   9.97974968       32.6609993    
           3  -11.7942505       9.97974968    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 27
          27
           1   9.97974968       32.6609993    
           2   9.97974968       32.6609993    
           3   9.97974968       32.6609993    
 26
  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
